--- a/style.scss
+++ b/style.scss
@@ -293,7 +293,7 @@ header {
 
         h3 {
             text-align: center;
-            font-size: 1.5em;
+            font-size: 1.4em;
             letter-spacing: 4px;
         }
 
@@ -306,6 +306,7 @@ header {
                     color: white;
                     font-family: Montserrat;                    
                 }
+                animation: floatText 2s ease-in infinite;    
             }
         }
     }
@@ -401,7 +402,7 @@ header {
     }
 
     50% {
-        transform: translatey(-5px);
+        transform: translatey(-3px);
     }
 
     100% {
