--- a/style.css
+++ b/style.css
@@ -146,73 +146,74 @@ header nav ul li a:hover {
   top: calc(100vh - 300px);
 }
 
+/*
 #work {
-  height: 100vh;
-  width: 100%;
-  background: #739ea8;
-  position: absolute;
-  top: 300vh;
-}
+    height: 100vh;
+    width: 100%;
+    background: rgb(115, 158, 168);
+    position: absolute;
+    top: 300vh;
 
-#work .text {
-  top: calc((100vh / 2) - 105px);
-  position: relative;
-  width: 700px;
-  height: 210px;
-  left: 150px;
-}
+    .text {
+        top: calc((100vh / 2) - 105px);
+        position: relative;
+        width: 700px;
+        height: 210px;
+        left: 150px;
 
-#work .text h1 {
-  float: left;
-}
+        h1 {
+            float: left;
+        }
 
-#work .text h3 {
-  width: 650px;
-  height: auto;
-  text-align: center;
-  float: right;
-}
+        h3 {
+            width: 650px;
+            height: auto;
+            text-align: center;
+            float: right;
+        }
+    }
 
-#work .work {
-  background: #8b5e5e;
-}
+    .work {
+        background: rgb(139, 94, 94);
+    }
 
-#work .wk0 {
-  position: absolute;
-  top: 80px;
-  left: 100px;
-}
+    .wk0 {
+        position: absolute;
+        top: 80px;
+        left: 100px;
+    }
 
-#work .wk1 {
-  position: absolute;
-  top: 200px;
-  left: 600px;
-}
+    .wk1 {
+        position: absolute;
+        top: 200px;
+        left: 600px;
+    }
 
-#work .wk2 {
-  position: absolute;
-  top: 100px;
-  left: 1050px;
-}
+    .wk2 {
+        position: absolute;
+        top: 100px;
+        left: 1050px;
+    }
 
-#work .wk3 {
-  position: absolute;
-  top: 430px;
-  left: 125px;
-}
+    .wk3 {
+        position: absolute;
+        top: 430px;
+        left: 125px;
+    }
 
-#work .wk4 {
-  position: absolute;
-  top: 400px;
-  left: 1200px;
-}
+    .wk4 {
+        position: absolute;
+        top: 400px;
+        left: 1200px;
+    }
 
-#work .wk5 {
-  position: absolute;
-  top: 520px;
-  left: 600px;
+    .wk5 {
+        position: absolute;
+        top: 520px;
+        left: 600px;
+    }
 }
-
+*/
 #contact {
   height: 100vh;
   width: 100%;
