--- a/style.scss
+++ b/style.scss
@@ -142,7 +142,7 @@ header {
         top: calc(100vh - 300px);
     }
 }
-
+/*
 #work {
     height: 100vh;
     width: 100%;
@@ -209,7 +209,7 @@ header {
         left: 600px;
     }
 }
-
+*/
 #contact {
     height: 100vh;
     width: 100%;
