--- a/style.css
+++ b/style.css
@@ -459,15 +459,20 @@ header nav ul li a:hover {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  margin: -1rem -1rem;
-  padding-bottom: 3rem;
+  height: 100vh;
+  width: 75vw;
+  overflow: hidden;
+  float: right;
+  z-index: 2;
+  position: absolute;
+  right: 0;
 }
 
 .gallery-item {
   position: relative;
   -webkit-box-flex: 1;
-      -ms-flex: 1 0 22rem;
-          flex: 1 0 22rem;
+      -ms-flex: 1 0;
+          flex: 1 0;
   color: #fff;
   cursor: pointer;
 }
@@ -487,7 +492,7 @@ header nav ul li a:hover {
   top: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.4);
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 .gallery-item-info {
