--- a/style.scss
+++ b/style.scss
@@ -450,13 +450,18 @@ header {
 #mosaic {
     display: flex;
     flex-wrap: wrap;
-    margin: -1rem -1rem;
-    padding-bottom: 3rem;
+    height: 100vh;
+    width: 75vw;
+    overflow: hidden;
+    float: right;
+    z-index: 2;
+    position: absolute;
+    right: 0;
 }
 
 .gallery-item {
     position: relative;
-    flex: 1 0 22rem;
+    flex: 1 0;
     color: #fff;
     cursor: pointer;
 }
@@ -470,7 +475,7 @@ header {
     top: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.4);
+    background-color: rgba(0, 0, 0, 0.5);
 }
 
 .gallery-item-info {
