--- a/style.scss
+++ b/style.scss
@@ -267,11 +267,12 @@ body {
 //----NEW PAGE-----
 
 #home {
+    height: 100%;
     .images {
         width: 513px;
         height: 155px;
         position: relative;
-        right: 85px;
+        right: 165px;
 
         img {
             position: relative;
