--- a/style.css
+++ b/style.css
@@ -291,7 +291,11 @@ body div {
 }
 
 #home nav {
-  margin-top: 150px;
+  position: relative;
+  width: 200px;
+  top: calc((100% / 2) - 280px);
+  left: 50px;
+  z-index: 5;
 }
 
 #home nav ul {
@@ -299,15 +303,15 @@ body div {
 }
 
 #home nav ul li {
-  margin-top: 40px;
-  margin-bottom: 40px;
+  margin: 30px auto;
   list-style-type: none;
 }
 
 #home nav ul li a {
   font-family: 'Nanum Gothic', sans-serif;
-  font-size: 3em;
+  font-size: 2em;
   text-decoration: none;
+  text-align: left;
   color: black;
 }
 
